Adición del layout formulario para cita y view de cita + Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
             android:name=".Activity.MainActivity"
             android:exported="true">
         </activity>
+
+        <!-- Nueva actividad: AppointmentActivity -->
+        <activity
+            android:name=".Activity.AppointmentActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
